- aes/gemlib.h cli/cmd.h desk/deskdir.c desk/deskfun.c desk/deskinf.c
  desk/deskpro.c include/config.h: Add new #define for MAXPATHLEN. (RFB)
- aes/geminit.c aes/geminit.h: Code cleanup: remove no-longer-used
  variables and externs. (RFB)

2014-03-30
- aes/geminit.c aes/gemstart.S: Use bzero() to clear global area. (RFB)

2014-04-02
- aes/geminit.c aes/gemlib.h aes/gempd.c aes/struct.h: Reorganise AES
  process-related structures. (RFB)

2014-04-03
- aes/geminit.c aes/gemlib.h aes/gemshlib.c: Rename g_dir[] to g_work[]
  and increase length (fixes regression from 2014-03-23). (RFB)
- aes/geminit.c aes/gemshlib.c: Code cleanup: replace magic number 128
  by CMDTAILSIZE where appropriate. (RFB)
  
2014-04-06
- aes/gemdosif.S aes/gemdosif.h aes/geminit.c: Code cleanup: use meaningful
  names for trap#2 interception functions. (RFB)
- aes/gemaplib.c aes/gemdisp.c aes/gemdosif.h aes/gemdosif.S aes/gemflag.c
  aes/geminit.c aes/gemshlib.c aes/gemstart.S: Code cleanup: use meaningful
  names for interrupt disable/enable routines. (RFB)
- aes/gemctrl.c aes/geminit.c aes/geminit.h aes/gemlib.h: Dynamically
  allocate process structures for desk accessories. (RFB)
- aes/gemwmlib.c aes/gemwmlib.h: Code cleanup: make desk_root[] local. (RFB)
- aes/geminit.c: Bug fix: free memory allocated for DA process structures
  on resolution change. (RFB)
- aes/gemctrl.c aes/geminit.c aes/gemlib.h: Revert DA dynamic memory
  allocation due to problems with resolution change. (RFB)
- vdi/vdi_raster.c: Fix crash in lineA Copy Raster Form ($a00e). (RFB)

2014-04-09
- aes/gemmnlib.c include/config.h: Replace NUM_DESKACC with NUM_ACCS for
  compatibility with TOS and future changes. (RFB)

2014-04-10
- aes/geminit.c aes/gemlib.h aes/gemmnlib.c aes/gemmnlib.h: Fix bug that
  caused accessories to stop responding after a few resolution changes. (RFB)

2014-04-19
- aes/gemshlib.c: Code cleanup: use PD struct instead of ptr to LONGs, and
  eliminate unnecessary zeroing. (RFB)