@@ -32,6 +32,17 @@
 #ifndef ASM_H
 #define ASM_H
 
+/*
+ * values of 'mode' for Pexec()
+ *
+ * these were moved here because of the definition of trap1_pexec() below
+ */
+#define PE_LOADGO     0
+#define PE_LOAD       3
+#define PE_GO         4
+#define PE_BASEPAGE   5
+#define PE_GOTHENFREE 6
+#define PE_RELOCATE   50    /* EmuTOS only, not in Atari TOS */
 
 /* OS entry points implemented in util/miscasm.S */
 extern long trap1(int, ...);
